# rust-protobuf-native

./: CHANGELOG.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  build.rs  release.toml  update.sh
.github/workflows/: main.yml
protobuf-native/: CHANGELOG.md  Cargo.toml  README.md  build.rs
protobuf-native/src/: bindings.cc  compiler.cc  compiler.h  compiler.rs  descriptor_database.rs  descriptor_pb.cc  descriptor_pb.h  descriptor_pb.rs  error.rs  internal.h  internal.rs  io.cc  io.h  io.rs  lib.cc  lib.h  lib.rs
protobuf-native/src/compiler/: importer.cc  importer.h  importer.rs
protobuf-native/src/internal/: cxx.rs  path.rs
protobuf-native/src/io/: zero_copy_stream.cc  zero_copy_stream.h  zero_copy_stream.rs
protobuf-native/testdata/: test.proto
protobuf-native/tests/: test.rs
protobuf-native/tests/protobuf-native/: io.rs  main.rs  util.rs
protobuf-src/: CHANGELOG.md  Cargo.toml  README.md  build.rs  update.sh
protobuf-src/protobuf/: Makefile.in  configure  configure~
protobuf-src/protobuf/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
protobuf-src/protobuf/benchmarks/: Makefile.in
protobuf-src/protobuf/conformance/: Makefile.in
protobuf-src/protobuf/src/: Makefile.in
protobuf-src/protobuf/src/google/protobuf/compiler/: command_line_interface_unittest.cc  importer.cc  parser.cc  parser_unittest.cc
protobuf-src/src/: lib.rs
protobuf-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
protobuf-sys/src/: lib.rs
protobuf-sys/tests/: test.rs
src/: lib.rs
