# Copyright Materialize, Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License in the LICENSE file at the
# root of this repository, or online at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "protobuf-native"
authors = ["Materialize, Inc."]
readme = "README.md"
description = "A high-level, safe API for libprotobuf."
documentation = "https://docs.rs/protobuf-native"
repository = "https://github.com/MaterializeInc/rust-protobuf-native"
license = "Apache-2.0"
categories = ["api-bindings"]
version = "0.2.2+3.19.1"
edition = "2021"

[dependencies]
cxx = "1.0.62"
paste = "1.0.6"
pretty_assertions = "1.0.0"
protobuf-src = { path = "../protobuf-src", version = "1.0.0" }
tempfile = "3.2.0"

[build-dependencies]
cxx-build = "1.0.62"
