# Copyright Materialize, Inc. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License in the LICENSE file at the
# root of this repository, or online at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "protobuf-sys"
authors = ["Materialize, Inc."]
readme = "README.md"
description = "Low-level bindings to libprotobuf."
documentation = "https://docs.rs/protobuf-sys"
repository = "https://github.com/MaterializeInc/rust-protobuf-native"
license = "Apache-2.0"
categories = ["external-ffi-bindings"]
version = "0.2.0+26.1"
edition = "2021"

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.122"
protobuf-src = { path = "../protobuf-src", version = "2.1.1" }

[build-dependencies]
autocxx-build = "0.26.0"
